--- a/resources.html
+++ b/resources.html
@@ -16,6 +16,10 @@
             --bg-color: #faf9f6;
             --cream: #fdfcf0;
         }
+        
+html {
+    scroll-behavior: smooth;
+}
 
         body.dark-theme {
             --white: #121212;
@@ -181,6 +185,20 @@
             <span><i class="fa-regular fa-clock"></i> 5 min read</span>
             <span><i class="fa-solid fa-layer-group"></i> 12 Resources</span>
         </div>
+
+        <div style="background: #f0f4f2; border-radius: 12px; padding: 15px; margin-bottom: 50px; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; font-family: sans-serif; font-size: 0.85rem; border: 1px solid #e0e8e3;">
+    <span style="color: var(--dark-green); font-weight: bold; margin-right: 5px;">Jump to:</span>
+    <a href="#resources" style="color: var(--mid-green); text-decoration: none; border-bottom: 1px dotted var(--mid-green);">Digital Printables</a>
+    <a href="#studies" style="color: var(--mid-green); text-decoration: none; border-bottom: 1px dotted var(--mid-green);">Research Database</a>
+    <a href="#glossary" style="color: var(--mid-green); text-decoration: none; border-bottom: 1px dotted var(--mid-green);">Clinical Glossary</a>
+</div>
+
+<div id="resources" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+    </div>
+
+<section id="glossary" style="margin-top: 60px;">
+    </section>
+
 
         <p>Your centralized hub for synergy checklists, clinical guides, and research links.</p>
     </header>
