--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -3,6 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Knowledge Repository | Wise & Healthy Living">
+<meta name="description" content="Explore our clinical research database, herbal synergy checklists, and botanical glossary. Science-backed protocols for modern wellness.">
+<meta name="keywords" content="herbal science, botanical synergy, ashwagandha research, turmeric bioavailability, clinical herbalism">
+<meta name="author" content="Wise & Healthy Living">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://yourusername.github.io/resources.html">
+<meta property="og:title" content="Wise & Healthy: Clinical Herbal Resources">
+<meta property="og:description" content="Access our peer-reviewed research database and printable synergy guides.">
+<meta property="og:image" content="https://yourusername.github.io/assets/images/social-preview.jpg">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://yourusername.github.io/resources.html">
+<meta property="twitter:title" content="Wise & Healthy: Clinical Herbal Resources">
+<meta property="twitter:description" content="Bridging the gap between clinical research and daily botanical practices.">
+<meta property="twitter:image" content="https://yourusername.github.io/assets/images/social-preview.jpg">
+
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
+
     <title>Remedy Pairings | Wise & Healthy Living</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
