--- a/resources.html
+++ b/resources.html
@@ -305,6 +305,16 @@ html {
             <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" style="background: white; border: 1px solid #ddd; padding: 10px; border-radius: 5px; cursor: pointer;">Back to Top</button>
         </div>
     </div>
+
+    <div style="max-width: 800px; margin: 0 auto 30px auto; padding: 20px; border: 1px dashed #ccc; border-radius: 8px; background-color: #fff;">
+    <h5 style="color: #444; margin-top: 0; font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; text-align: center;">Medical Disclaimer</h5>
+    <p style="font-size: 0.75rem; color: #777; line-height: 1.6; margin-bottom: 0;">
+        The information provided on <strong>Wise & Healthy Living</strong>—including text, graphics, images, and research summaries—is for educational and informational purposes only. It is not intended as a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your physician or other qualified health provider with any questions you may have regarding a medical condition. Never disregard professional medical advice or delay in seeking it because of something you have read on this website. 
+        <br><br>
+        <em>*These statements have not been evaluated by the Food and Drug Administration. The resources listed here are not intended to diagnose, treat, cure, or prevent any disease.</em>
+    </p>
+</div>
+
 </footer>
 
 <script>
