--- a/index.html
+++ b/index.html
@@ -146,9 +146,6 @@ body.dark-theme .comparison-table td {
     border-bottom: 1px solid #333;
 }
 
-
-        
-                
         /* Add this to your CSS block to make the "grid" work */
 .social-contact-grid {
     display: flex; /* Use flex for easier row management */
@@ -449,7 +446,7 @@ body.dark-theme .recent-tag {
 <nav>
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
-    <a href="remedy-pairing.html">Parings</a>
+    <a href="remedy-pairing.html">Pairings</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>
@@ -840,16 +837,16 @@ body.dark-theme .recent-tag {
         <h2 style="text-align: center; margin-bottom: 25px; color: --var(white);">Let's Connect</h2>
         <div class="social-contact-grid">
     <a href="https://wa.me/17587235872" class="social-item" target="_blank">
-        <i class="fa-brands fa-whatsapp social-icon"></i>
+        <i style="color: --var(white);" class="fa-brands fa-whatsapp social-icon"></i>
     </a>
     <a href="https://www.facebook.com/share/1HLipef9e8/" class="social-item" target="_blank">
-        <i class="fa-brands fa-facebook social-icon"></i>
+        <i style="color: --var(white);" class="fa-brands fa-facebook social-icon"></i>
     </a>
     <a href="https://www.instagram.com/wiseandhealthy_living" class="social-item" target="_blank">
-        <i class="fa-brands fa-instagram social-icon"></i>        
+        <i style="color: --var(white);" class="fa-brands fa-instagram social-icon"></i>        
     </a>
     <a href="mailto:wiseandhealthyliving@yahoo.com" class="social-item">
-        <i class="fa-solid fa-envelope social-icon"></i>
+        <i style="color: --var(white);" class="fa-solid fa-envelope social-icon"></i>
     </a>
 </div>
     </div>
