--- a/index.html
+++ b/index.html
@@ -315,6 +315,88 @@ body.dark-theme .blog-content h3 { color: var(--honey); }
         align-items: center;
     }
 }
+        /* Affiliate Section Styles */
+.affiliate-section {
+    padding: 60px 0;
+    background-color: var(--soft-gray);
+    border-radius: 20px;
+    margin: 40px 0;
+}
+
+.affiliate-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+    padding: 20px;
+}
+
+.product-card {
+    background: var(--white);
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    transition: transform 0.3s ease;
+    border: 1px solid #eee;
+}
+
+.product-card:hover {
+    transform: translateY(-5px);
+}
+
+.product-img {
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-color: #eee;
+}
+
+.product-info {
+    padding: 20px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.product-info h3 {
+    margin: 0 0 10px 0;
+    font-size: 1.1rem;
+    color: var(--dark-green);
+}
+
+.product-info p {
+    font-size: 0.85rem;
+    color: #666;
+    margin-bottom: 15px;
+    flex-grow: 1;
+}
+
+.buy-btn {
+    background: var(--mid-green);
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    transition: 0.3s;
+}
+
+.buy-btn:hover {
+    background: var(--honey);
+}
+
+.affiliate-disclaimer {
+    text-align: center;
+    font-size: 0.75rem;
+    color: #999;
+    margin-top: 20px;
+    font-style: italic;
+}
+
 
         /* Source Link Boxes */
         .source-link { background: var(--soft-gray); padding: 12px; border-radius: 8px; margin-top: 15px; font-size: 0.8rem; border: 1px solid rgba(0,0,0,0.05); }
@@ -498,9 +580,10 @@ body.dark-theme .recent-tag {
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
     <a href="remedy-pairing.html">Pairings</a>
+    <a href="tea-guide.html">Tea Guide</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#contact">Contact</a>
+    <a href="#contact">Contact</a>    
     <a href="resources.html">Resources</a>
 </nav>
 
@@ -895,6 +978,46 @@ body.dark-theme .recent-tag {
         <a href="blog.html" class="search-btn" style="text-decoration: none;">View All Articles</a>
     </div>
     </section>
+    <section class="container affiliate-section">
+    <div style="text-align: center; margin-bottom: 40px;">
+        <h2 style="color: var(--dark-green);">Recommended Tools & Supplies</h2>
+        <p>The essentials I use for preparing and storing natural remedies.</p>
+    </div>
+
+    <div class="affiliate-grid">
+        <div class="product-card">
+            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1544650039-22886fbb4323?auto=format&fit=crop&q=80&w=500');"></div>
+            <div class="product-info">
+                <h3>Glass Apothecary Jars</h3>
+                <p>Amber glass protects your herbs from UV light, preserving their potency for much longer.</p>
+                <a href="YOUR_AFFILIATE_LINK_HERE" target="_blank" class="buy-btn">View on Amazon <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1576092729250-19c13731488a?auto=format&fit=crop&q=80&w=500');"></div>
+            <div class="product-info">
+                <h3>Stainless Steel Infuser</h3>
+                <p>Fine-mesh strainer perfect for those delicate leaf infusions and medicinal flower teas.</p>
+                <a href="YOUR_AFFILIATE_LINK_HERE" target="_blank" class="buy-btn">View on Amazon <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-img" style="background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?auto=format&fit=crop&q=80&w=500');"></div>
+            <div class="product-info">
+                <h3>Organic Castor Oil</h3>
+                <p>Hexane-free, cold-pressed castor oil—ideal for topical packs and skin hydration.</p>
+                <a href="YOUR_AFFILIATE_LINK_HERE" target="_blank" class="buy-btn">View on Amazon <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+    </div>
+
+    <p class="affiliate-disclaimer">
+        * As an Amazon Associate, I earn from qualifying purchases. This helps support the research for this library!
+    </p>
+</section>
+
 <footer>
     <section class="contact-section" id="contact">
     <div style="max-width: 100%; margin: auto; background: var(--dark-green); padding: 10px; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
