--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body.dark-theme .comparison-table td {
     background: var(--dark-green);
     color: white;
     padding: 60px 20px;
-    margin: 40px 0;
+    margin: 40px 5px;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -580,7 +580,7 @@ body.dark-theme .recent-tag {
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
     <a href="remedy-pairing.html">Pairings</a>
-    <a href="tea-guide.html">Tea Guide</a>
+    <a href="#teaguide">Tea Guide</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>    
@@ -939,7 +939,7 @@ body.dark-theme .recent-tag {
         </a>
     </div>
 </section>
-    <section class="tea-guide-cta">
+    <section id="teaguide" class="tea-guide-cta">
     <div class="tea-cta-text">
         <h2>Perfect Your Brew</h2>
         <p>Are you burning your delicate herbs? Our Steeping Guide teaches you the difference between an <strong>Infusion</strong> and a <strong>Decoction</strong> to ensure you get 100% of the medicinal benefits.</p>
