--- a/tea-guide.html
+++ b/tea-guide.html
@@ -184,7 +184,7 @@ nav a:hover {
                 <p>Best for <strong>roots and bark</strong>. Simmer the herbs in boiling water for 15–20 minutes to extract minerals.</p>
             </div>
         </div>
-
+<div class="table-container">
         <table class="tea-table">
             <thead>
                 <tr>
@@ -221,7 +221,7 @@ nav a:hover {
                 </tr>
             </tbody>
         </table>
-
+</div>
         <div class="pro-tip">
             <strong><i class="fa-solid fa-lightbulb"></i> Wise Tip:</strong> Always cover your cup while steeping! The steam contains the "volatile oils"—the very part of the herb that provides the aroma and many medicinal benefits.
         </div>
