--- a/index.html
+++ b/index.html
@@ -579,9 +579,9 @@ body.dark-theme .recent-tag {
 <nav>
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
-    <a href="remedy-pairing.html">Pairings</a>
+    <a href="#synergy-teaser">Pairings</a>
     <a href="#teaguide">Tea Guide</a>
-    <a href="blog.html">Blog</a>
+    <a href="#blog-preview">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>    
     <a href="resources.html">Resources</a>
@@ -926,7 +926,7 @@ body.dark-theme .recent-tag {
     <h4><i class="fa-solid fa-lightbulb"></i> Did You Know?</h4>
     <p id="fact-text"></p>
 </section>
-    <section class="synergy-teaser" style="background: var(--cream); padding: 60px 20px; text-align: center; border-top: 3px solid var(--honey); border-bottom: 3px solid var(--honey); margin: 40px 0;">
+    <section id="synergy-teaser" class="synergy-teaser" style="background: var(--cream); padding: 60px 20px; text-align: center; border-top: 3px solid var(--honey); border-bottom: 3px solid var(--honey); margin: 40px 0;">
     <div style="max-width: 800px; margin: auto;">
         <i class="fa-solid fa-flask-vial" style="font-size: 3rem; color: var(--mid-green); margin-bottom: 20px;"></i>
         <h2 style="color: var(--dark-green); margin-bottom: 15px;">Unlock Herbal Synergism</h2>
