--- a/glossary.html
+++ b/glossary.html
@@ -107,12 +107,12 @@
 <body>
 
 <nav>
-    <a href="#home">Home</a>
-    <a href="#remedies">Remedies</a>
-    <a href="remedy-parings.html">Parings</a>
+    <a href="index.html">Home</a>
+    <a href="remedies.html">Remedies</a>
+    <a href="remedy-parings.html">Pairings</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html#contact">Contact</a>
 </nav>
 
 <header>
