--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ body.dark-theme .blog-content h3 { color: var(--honey); }
     padding: 60px 0;
     background-color: var(--soft-gray);
     border-radius: 20px;
-    margin: 40px 0;
+    margin: 40px 10px;
 }
 
 .affiliate-grid {
@@ -581,6 +581,7 @@ body.dark-theme .recent-tag {
     <a href="#remedies">Remedies</a>
     <a href="#synergy-teaser">Pairings</a>
     <a href="#teaguide">Tea Guide</a>
+    <a href="#affiliates">Shop</a>
     <a href="#blog-preview">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>    
@@ -978,7 +979,7 @@ body.dark-theme .recent-tag {
         <a href="blog.html" class="search-btn" style="text-decoration: none;">View All Articles</a>
     </div>
     </section>
-    <section class="container affiliate-section">
+    <section id="affiliates" class="container affiliate-section">
     <div style="text-align: center; margin-bottom: 40px;">
         <h2 style="color: var(--dark-green);">Recommended Tools & Supplies</h2>
         <p>The essentials I use for preparing and storing natural remedies.</p>
