--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
 
         nav a:hover { color: var(--honey); }
 
-        .container { max-width: 1100px; margin: auto; padding: 40px 20px; }
+        .container { max-width: 1100px; margin: auto; padding: 60px 20px; border-top: 3px solid var(--dark-green); }
 
         /* --- STORE SPECIFIC STYLES --- */
         .filter-group {
