--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@ body.dark-theme .recent-tag {
 <nav>
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
+    <a href="herb-library.html">Herb Library</a>
     <a href="#synergy-teaser">Pairings</a>
     <a href="#teaguide">Tea Guide</a>
     <a href="#affiliates">Shop</a>
