--- a/store.html
+++ b/store.html
@@ -71,7 +71,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a style="color: var(--honey);" href="herbal-store.html">Herb Store</a>
+    <a style="color: var(--honey);" href="store.html">Herb Store</a>
     <a href="#safety">Safety</a>
     <a href="about.html">About</a>
 </nav>
@@ -89,7 +89,7 @@
         <button onclick="toggleSignup()" class="buy-btn" style="width: auto; padding: 12px 30px;"><i class="fa-solid fa-file-pdf"></i> Get the Free Guide</button>
         <div id="signup-form" style="display: none; margin-top: 20px;">
             <input type="email" placeholder="Your Email Address" style="padding: 10px; border-radius: 5px; border: 1px solid #ccc; width: 250px;">
-            <button onclick="alert('PDF Sent! Check your inbox.')" style="background: var(--dark-green); color: white; border: none; padding: 10px 24px; border-radius: 5px; cursor: pointer; font-weight: bold;">Send PDF</button>
+            <button onclick="window.location.href='thank-you.html'" style="background: var(--dark-green); color: white; border: none; padding: 10px 24px; border-radius: 5px; cursor: pointer; font-weight: bold;">Send PDF</button>
         </div>
     </div>
 
