--- a/index.html
+++ b/index.html
@@ -442,6 +442,21 @@ body.dark-theme .blog-content h3 { color: var(--honey); }
     display: block;
 }
 
+                /* Featured Library Card Section */
+        .library-focus { padding: 80px 20px; background: var(--cream); text-align: center; }
+        .sole-card { 
+            max-width: 800px; 
+            margin: 0 auto; 
+            background: var(--white); 
+            border-radius: 20px; 
+            padding: 50px; 
+            box-shadow: 0 15px 40px rgba(0,0,0,0.1);
+            border-top: 10px solid var(--mid-green);
+        }
+        .sole-card h2 { color: var(--dark-green); font-size: 2.2rem; margin-top: 0; }
+        .sole-card p { font-size: 1.2rem; color: #555; margin-bottom: 30px; }
+        
+
         .seasonal-banner {
     background: var(--cream);
     border-bottom: 2px solid var(--honey);
@@ -578,8 +593,7 @@ body.dark-theme .recent-tag {
 
 <nav>
     <a href="#home">Home</a>
-    <a href="#remedies">Remedies</a>
-    <a href="herb-library.html">Herb Library</a>
+    <a href="herb-library.html">Herbal Library</a>
     <a href="#synergy-teaser">Pairings</a>
     <a href="#teaguide">Tea Guide</a>
     <a href="#affiliates">Shop</a>
@@ -587,6 +601,7 @@ body.dark-theme .recent-tag {
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>    
     <a href="resources.html">Resources</a>
+    <a href="glossary.html">Glossary</a>
 </nav>
 
     <section id="seasonalBanner" class="seasonal-banner">
